syntax = "proto3";

package resources.internet;

import "buf/validate/validate.proto";
import "resources/timestamp/timestamp.proto";
import "resources/users/users.proto";
import "tagger/tagger.proto";

option go_package = "github.com/fivenet-app/fivenet/v2025/gen/go/proto/resources/internet;internet";

enum AccessLevel {
  ACCESS_LEVEL_UNSPECIFIED = 0;
  ACCESS_LEVEL_BLOCKED = 1;
  ACCESS_LEVEL_VIEW = 2;
  ACCESS_LEVEL_EDIT = 3;
  ACCESS_LEVEL_OWNER = 4;
}

message PageAccess {
  repeated PageJobAccess jobs = 1 [(buf.validate.field).repeated.max_items = 20, (tagger.tags) = "alias:\"job_access\""];
  repeated PageUserAccess users = 2 [(buf.validate.field).repeated.max_items = 20, (tagger.tags) = "alias:\"user_access\""];
}

message PageJobAccess {
  uint64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 target_id = 3;
  string job = 4 [(buf.validate.field).string.max_len = 20];
  optional string job_label = 5 [(buf.validate.field).string.max_len = 50];
  int32 minimum_grade = 6 [(buf.validate.field).int32.gte = 0];
  optional string job_grade_label = 7 [(buf.validate.field).string.max_len = 50];
  AccessLevel access = 8 [(buf.validate.field).enum.defined_only = true];
}

message PageUserAccess {
  uint64 id = 1;
  optional resources.timestamp.Timestamp created_at = 2;
  uint64 target_id = 3;
  int32 user_id = 4 [(buf.validate.field).int32.gt = 0];
  optional resources.users.UserShort user = 5;
  AccessLevel access = 6 [(buf.validate.field).enum.defined_only = true];
}
